@@ -149,12 +149,7 @@ class DeltaCommandReceiverImpl implements DeltaCommandReceiver {
     channel.sendEvent(
         seqNum ->
             new ChildDeleted(
-                    seqNum,
-                    cmd.parent,
-                    cmd.deletedChild,
-                    Collections.emptyList(),
-                    cmd.index,
-                    cmd.containment)
+                    seqNum, cmd.parent, cmd.deletedChild, List.of(), cmd.index, cmd.containment)
                 .addSource(source));
   }
 
@@ -464,7 +459,7 @@ class DeltaCommandReceiverImpl implements DeltaCommandReceiver {
     List<String> descendants = new ArrayList<>();
     collectDescendants(data, cmd.deletedPartition, descendants);
     inMemoryServer.deletePartitions(
-        repositoryName, Collections.singletonList(cmd.deletedPartition));
+        repositoryName, List.of(cmd.deletedPartition));
     channel.sendEvent(
         seqNum ->
             new PartitionDeleted(seqNum, cmd.deletedPartition, descendants).addSource(source));
